[package]
name = "actix_pythoneer"
version = "0.1.0"
authors = ["thomasfire <thomasfire@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.*"
toml = "0.5"
serde_derive = "1.0.*"
serde = "1.0.*"
regex = "1.*"